--- a/Day08/ngd-lesson08-lab01/public/index.html
+++ b/Day08/ngd-lesson08-lab01/public/index.html
@@ -25,7 +25,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Nguyen Gia Duy-k23cnt3</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="css/style.css">
+
     >
   </head>
   <body>
