--- a/ngd-2310900031-k23cnt3-exam/ngd-2310900031-k23cnt3-exam/public/index.html
+++ b/ngd-2310900031-k23cnt3-exam/ngd-2310900031-k23cnt3-exam/public/index.html
@@ -27,7 +27,8 @@
     <title>Nguyen Gia Duy-k23cnt3</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
   </head>
-  <body>
+  <body style="background-color: #f0f0f0;">
+
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="ngdRoot"></div>
     <!--
